# minigrep

./: Cargo.toml  README.md  index.html
argtool/: Cargo.toml
argtool/src/: argitem.rs  argroup.rs  lib.rs
argtool/tests/: test.rs
doc/: search-index.js
doc/argtool/: enum.ArgType.html  enum.ArgValue.html  index.html  struct.ArgGroup.html  struct.ArgItem.html
doc/grep/: fn.main.html  index.html
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/anyhow/: all.html  fn.Ok.html  index.html  macro.anyhow.html  macro.bail.html  macro.ensure.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
docs/argtool/: all.html  index.html  sidebar-items.js
docs/doc/: search-index.js
docs/grep/: all.html  fn.main.html  fn.main_loop.html  index.html  sidebar-items.js
docs/matmult/: all.html  fn.file_to_mat.html  fn.get_rand.html  fn.main.html  fn.mat_array.html  fn.nalgebra_new_dot.html  index.html  sidebar-items.js  type.Matrix2x3f.html
docs/minigrep/: all.html  (+3 more)
example/: mat.csv  test.txt
gitgrep/: Cargo.toml
grep/: Cargo.toml
grepprof/: Cargo.toml
matmult/: Cargo.toml
minigrep/: Cargo.toml
minigrep/src/: argparse.rs  lib.rs  main.rs  runner.rs  test.rs  threadtool.rs
minigrep/src/grep/: handler.rs  matcher.rs
minigrep/src/runner/: grep.rs
minigrep/src/runner/grep/: handler.rs
minigrep/src/runner/utils/: glober.rs  reader.rs
minigrep/src/utils/: glober.rs  logger.rs  reader.rs
scripts/: grep.sh  matmult.py  matmult_np.py  minigrep.sh  pre_push.sh  ripgrep.sh  test_grep.sh
(+175 files in other folders)
