cargo-features = ["edition2021"]

[package]
name = "minigrep"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argtool = { path = "../argtool" }
anyhow = "1.0.71"
regex = "1"
thiserror = "1.0.40"
glob = "0.3.1"
crossbeam = "0.8.2"
walkdir = "2.3.3"
